<resources>
    <string name="app_name">nmd_auth</string>
    <string name="submit">Submit</string>
    <string name="enter_desired_location">Enter desired location</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="log_out">Log Out</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_upto_3_locations">Add upto 3 locations</string>
    <string name="not_an_existing_user">Not an existing user?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>

</resources>
