<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nmdbg1"
    tools:context=".UserDetailsActivity">

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        app:layout_constraintVertical_bias="0.217" />

    <EditText
        android:id="@+id/etRepass"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_white_solid"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepass" />
</androidx.constraintlayout.widget.ConstraintLayout>